--- a/src/App.css
+++ b/src/App.css
@@ -31,16 +31,17 @@ textarea, input {
 }
 
 button {
-  background-color: #007bff;
-  color: #fff;
+  background-color: white;
+  color: black;
   padding: 10px 20px;
-  border: none;
+  border: wheat 1px solid;
   border-radius: 5px;
   cursor: pointer;
 }
 
 button:hover {
-  background-color: #0056b3;
+  background-color: gray;
+  color: wheat;
 }
 
 /* Not Listesi Stilleri */
@@ -94,3 +95,23 @@ button:hover {
 .note {
   position: relative;
 }
+
+/* Dosya seçim inputu için stil */
+.fileInput {
+  cursor: pointer;
+  font-size: 16px;
+  padding: 8px 15px;
+  background-color: #f44336; /* Kırmızı */
+  color: white;
+  border: none;
+  border-radius: 12px;
+  text-align: center;
+  display: inline-block;
+  margin: 10px;
+}
+
+.fileInput:hover {
+  background-color: #d32f2f; /* Daha koyu bir kırmızı */
+}
+
+
